ANDROID: HACK: Makefile: fix all build warnings for in tree code
Undoes

commit 0fd6c92c20fe ("ANDROID: HACK: Makefile: whitelist CFLAGS to
reenable Werror")

now that we've backported all necessary fixes from upstream. Rather than
have one big warning-whitelist that blankets the kernel, push the
remaining warnings down into the deepest subdirs for out of tree code.
We will further work to fix out of tree warnings in b/37513383, and
b/62058353.

Bug: 37513383
Fixes: 62057517
Bug: 62058353
Change-Id: Ic4783357462ff4c6fa0ec69a03e9c57bca1b8fb1
Signed-off-by: Nick Desaulniers <ndesaulniers@google.com>
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/sound/soc/codecs/Makefile
+++ b/sound/soc/codecs/Makefile
@@ -432,3 +432,7 @@ obj-y += msm_sdw/
 obj-$(CONFIG_SND_SOC_TAS2557)	+= tas2557/
 obj-$(CONFIG_SND_SOC_TFA9891)	+= tfa9891/
 
+
+# TODO: remove me b/62058353
+subdir-ccflags-y += \
+	-Wno-enum-conversion
